--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,16 @@
     <jdk.version>1.8</jdk.version>
 
     <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
+       <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
   </properties>
 
   <build>
     <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>${maven-deploy-plugin.version}</version>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
